# Dentistry-Website

./: .gitignore  app.py  dentistry.db  gunicorn.conf.py  gunicorn_config.py  notes.txt  pyproject.toml  pytest.ini  requirements.txt
routes/: auth_routes.py  base_routes.py  test_routes.py
static/css/: style.css  styles.css
static/js/: app.js
templates/: 404.html  500.html  auth.html  auth_callback.html  base.html  dashboard.html  history.html  index.html  profile.html  quiz.html  results.html  review.html  signin.html  signup.html  test_config.html  test_history.html  test_page.html  verify_email.html
templates/user_management/: forgot_password.html  reset_password.html  signin.html  signup.html
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_helpers.py  test_quiz.py  test_rate_limiting.py
utils/: __init__.py  database.py  helpers.py  question_class.py  supabase_utils.py  utils.py  validation.py
