[project]
name = "dentistry-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-docx>=1.1.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-limiter>=4.0.0",
    "gunicorn>=23.0.0",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "supabase>=2.23.2",
]
